tests/ui/parser/not-a-pred.stderr
error: return types are denoted using `->`
  --> $DIR/not-a-pred.rs:1:26
   |
LL | fn f(a: isize, b: isize) : lt(a, b) { }
   |                          ^
   |
help: use `->` instead
   |
LL - fn f(a: isize, b: isize) : lt(a, b) { }
LL + fn f(a: isize, b: isize) -> lt(a, b) { }
   |

error[E0573]: cannot find type `lt` in this scope
  --> $DIR/not-a-pred.rs:1:28
   |
LL | fn f(a: isize, b: isize) : lt(a, b) { }
   |                            ^^ not found in this scope
   |
   = note: a function named `lt` exists in another namespace

error[E0573]: cannot find type `a` in this scope
  --> $DIR/not-a-pred.rs:1:31
   |
LL | fn f(a: isize, b: isize) : lt(a, b) { }
   |                               ^ not found in this scope
   |
   = note: a local variable named `a` exists in another namespace

error[E0573]: cannot find type `b` in this scope
  --> $DIR/not-a-pred.rs:1:34
   |
LL | fn f(a: isize, b: isize) : lt(a, b) { }
   |                                  ^ not found in this scope
   |
   = note: a local variable named `b` exists in another namespace

error[E0425]: cannot find function `check` in this scope
  --> $DIR/not-a-pred.rs:12:5
   |
LL |     check (lt(a, b));
   |     ^^^^^ not found in this scope

error: aborting due to 5 previous errors

Some errors have detailed explanations: E0425, E0573.
For more information about an error, try `rustc --explain E0425`.
